--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = src/aio-base-backend
 	url = https://github.com/AIO-2030/aio-base-backend.git
 	branch = master
+[submodule "src/aio-base-frontend"]
+	path = src/aio-base-frontend
+	url = https://github.com/AIO-2030/aio-base-frontend.git
+	branch = main
