正确配置aio-base-frontend子模块
- 配置aio-base-frontend使用master分支 (包含真正的代码)
- 使用SSH URL避免连接问题
- 现在两个子模块都正确指向各自的master分支

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = master
 [submodule "src/aio-base-frontend"]
 	path = src/aio-base-frontend
-	url = https://github.com/AIO-2030/aio-base-frontend.git
-	branch = main
+	url = git@github.com:AIO-2030/aio-base-frontend.git
+	branch = master
