Add alaya-chat-nexus-frontend as submodule
- Add AIO-2030/alaya-ai-chat-nexus as submodule (main branch)
- Update .gitignore to exclude backup directory
- Update README.md with new submodule structure
- Create comprehensive SUBMODULE_GUIDE.md with all three submodules
- Fix branch differences documentation (backend: master, frontends: main)

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = src/aio-base-frontend
 	url = git@github.com:AIO-2030/aio-base-frontend.git
 	branch = master
+[submodule "src/alaya-chat-nexus-frontend"]
+	path = src/alaya-chat-nexus-frontend
+	url = git@github.com:AIO-2030/alaya-ai-chat-nexus.git
+	branch = main
