--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "type": "module",
   "workspaces": [
     "src/aio-base-frontend",
-    "src/alaya-ai-chat-nexus"
+    "src/alaya-chat-nexus-frontend"
   ]
 }
