--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
       "strict": true,
       "target": "ES2020",
+      "module": "ES2020",
       "experimentalDecorators": true,
       "strictPropertyInitialization": false,
       "moduleResolution": "node",
